--- a/src/app/dashboard/transfer-form/transfer-form.component.scss
+++ b/src/app/dashboard/transfer-form/transfer-form.component.scss
@@ -4,7 +4,7 @@
   width: 350px;
   height: auto;
   padding: 0;
-  border-radius: 8px;
+  border-radius: 20px;
 
   ::ng-deep {
     .mat-card-header .mat-card-title, .mat-card-actions {
@@ -21,7 +21,7 @@
     background: $primary-blue;
     padding: 1rem;
     color: white;
-    border-radius: 8px 8px 0 0;
+    border-radius: 20px 20px 0 0;
   }
 
   .transfer-form--content {
